feat(JetBrains): new License server activator